Fix menu on mobile view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,6 +59,7 @@
   @apply top-6;
   @apply right-6;
   @apply lg:hidden;
+  @apply z-50;
 }
 
 #menu-btn[data-menu-open="true"] {
